--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
+    "lib-flexible": "^0.3.2",
     "swiper": "^4.1.6",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
@@ -64,6 +65,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "px2rem-loader": "^0.1.7",
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
